--- a/style.css
+++ b/style.css
@@ -73,7 +73,13 @@ body {
     animation: bouncy 1s ease;
 }
 a:link {
-    color: purple;
+    color:#D428FF;
+}
+a:visited {
+  color: #D428FF;
+}
+.filter-glow-orange {
+  filter:drop-shadow(0 0 40px #F4834D)
 }
 .about-me {
     align-items: center;
@@ -82,11 +88,30 @@ a:link {
     border-radius: 10px;
     margin-left: auto;
     margin-right: auto;
-    width: 85%;
+    width: calc(85% - 8px);
     background-color: rgba(0, 0, 255, 0.35);
-    height: 125px;
+    height: 115px;
     z-index: 999999999;
     position: relative;
+    border: 8px solid blue;
+}
+.about-me-border {
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    border-radius: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    width: 85%;
+    background-color: rgba(0, 0, 180, 1);
+    height: 130px;
+    z-index: 999999999;
+    position: relative;
+}
+.fopi {
+    rotate: 10deg;
+    right: -6px;
+    top: -10px;
 }
 .about-me-text {
     position: relative;
@@ -108,6 +133,9 @@ a:link {
     filter: blur(40px);
     font-size: 120px;
     letter-spacing: 0;
+    z-index: 1;
+}
+.nebulaAnimation {
     animation-name: spinnycolornyeeoomm;
     animation-duration: 10s;
     animation-iteration-count: infinite;
@@ -115,9 +143,7 @@ a:link {
     animation-direction: normal;
     animation-fill-mode: none;
     animation-play-state: running;
-    z-index: 1;
 }
-
 .containers {
     width: 100%;
     display: flex;
@@ -530,4 +556,8 @@ a:link {
     80% {
         color: rgba(78, 3, 116, 0.773);
     }
+}
+.xmppstatus {
+  font-size: 10px;
+  color: yellow;
 }
